--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -7,5 +7,10 @@ services:
     # this creates a service per class whose id is the fully-qualified class name
     Kookaburra\SchoolAdmin\:
         resource: '../../../src/*'
-        exclude: '../../../src/{DependencyInjection,Resources,Tests,Form/EventListener,Provider}'
+        exclude: '../../../src/{DependencyInjection,Resources,Tests,Form/EventListener,Form/Transform,Provider}'
 
+    Kookaburra\SchoolAdmin\Pagination\SpecialDayPagination:
+        calls:
+            -   method: setStack
+                arguments:
+                    - '@request_stack'
